5단계 - 자동차 경주(리팩토링) (#3959)
* feat : 리뷰 반영

* docs : 요구사항 정의

* refactor : domain, controller 패키지 구성

Co-authored-by: jayden-17 <jayden.17@kakaocorp.com>