@@ -1,5 +1,8 @@
 package nextstep.javaracingcar;
 
+import nextstep.javaracingcar.domain.CarDrivingResult;
+import nextstep.javaracingcar.domain.CarRacingResult;
+import nextstep.javaracingcar.domain.Distance;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
@@ -7,6 +10,7 @@ import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
 public class CarRacingResultTest {
 
@@ -15,10 +19,12 @@ public class CarRacingResultTest {
     void spec01() {
         final CarDrivingResult jayden01 = new CarDrivingResult("j01", new Distance(10));
         final CarDrivingResult jayden02 = new CarDrivingResult("j02", new Distance(3));
-        final List<CarDrivingResult> cars = Arrays.asList(jayden01, jayden02);
+        final List<CarDrivingResult> cars = List.of(jayden01, jayden02);
         final CarRacingResult racingResult = new CarRacingResult(cars);
-        assertThat(racingResult.winners()).contains(jayden01);
-        assertThat(racingResult.winners()).doesNotContain(jayden02);
+        assertAll(
+                () -> assertThat(racingResult.winners()).contains(jayden01),
+                () -> assertThat(racingResult.winners()).doesNotContain(jayden02)
+        );
     }
 
     @DisplayName("우승자는 여러명이 될 수 있다.")
@@ -30,7 +36,10 @@ public class CarRacingResultTest {
         final CarDrivingResult jayden04 = new CarDrivingResult("j04", new Distance(3));
         final List<CarDrivingResult> cars = Arrays.asList(jayden01, jayden02, jayden03, jayden04);
         final CarRacingResult racingResult = new CarRacingResult(cars);
-        assertThat(racingResult.winners()).containsExactly(jayden01, jayden02);
-        assertThat(racingResult.winners()).doesNotContain(jayden03, jayden04);
+        final List<CarDrivingResult> winners = racingResult.winners();
+        assertAll(
+                () -> assertThat(winners).containsExactly(jayden01, jayden02),
+                () -> assertThat(winners).doesNotContain(jayden03, jayden04)
+        );
     }
 }
